--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ plugins {
     //id "com.github.johnrengelman.shadow" version "1.2.2"
     id "net.franz-becker.gradle-lombok" version "1.3"
     id 'com.jfrog.bintray' version '1.1'
+	id "org.ajoberstar.grgit" version "2.1.0"
 }
 apply from: 'https://raw.githubusercontent.com/BuiltBrokenModding/BuiltBrokenScripts/buildScripts/index/index.gradle'
 apply plugin: 'com.github.kt3k.coveralls'
