--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,14 @@ buildscript {
 }
 
 plugins {
-  id 'com.matthewprenger.cursegradle' version '1.0.1'
+  id 'com.matthewprenger.cursegradle' version '1.0.8'
   id 'net.saliman.cobertura' version '2.2.5'
   id 'com.github.kt3k.coveralls' version '2.0.1'
   //id "com.github.johnrengelman.shadow" version "1.2.2"
   id "net.franz-becker.gradle-lombok" version "1.3"
   id 'com.jfrog.bintray' version '1.1'
+  id "se.bjurr.gitchangelog.git-changelog-gradle-plugin" version "1.32"
+  id "org.ajoberstar.grgit" version "2.1.0"
 }
 
 apply from: 'https://raw.githubusercontent.com/BuiltBrokenModding/BuiltBrokenScripts/buildScripts/index/index.gradle'
